--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -32,7 +32,7 @@ button {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary;
     font-size: 16px;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
