--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-    font-family: 'Raleway', sans-serif;
+    font-family: $fontLogo;
     font-weight: 400;
     font-size: 26px;
     line-height: 1.19;
@@ -20,7 +20,7 @@
 }
 
 .logo-down {
-    font-family: 'Raleway', sans-serif;
+    font-family: $fontLogo;
     font-weight: 400;
     font-size: 26px;
     line-height: 1.19;
