--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -3,7 +3,7 @@
 }
 
 .header-second-work {
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -26,7 +26,7 @@
 
 .overlay-item-img {
     position: absolute;
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary ;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
