--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,7 +16,7 @@
 }
 
 .location {
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary;
     font-style: normal;
     font-size: 14px;
     font-weight: 400;
@@ -32,7 +32,7 @@
 }
 
 .footer-contact {
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -53,7 +53,7 @@
 
 .header-join-us {
     display: block;
-    font-family: 'Roboto', sans-serif;
+    font-family: $fontPrimary;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -73,13 +73,11 @@
 }
 
 .social-link-footer {
-    display: flex;
-    justify-content: center;
+    @include flexCenter;
     width: 44px;
     height: 44px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    align-items: center;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
