--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,15 @@
 @import'./utils/variables';
 @import './utils/visually-hidden';
+@import'./utils/placeholders';
+@import'./utils/mixin';
 
 @import'./base/common';
 @import'./base/section';
 @import'./base/container';
 
 @import'./components/logo';
+@import'./components/menu';
+@import'./components/menu-contact';
 
 @import'./layout/header';
 @import'./layout/hero';
