--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,3 +14,6 @@
     --background-gradient: rgba(47, 48, 58, 0.4);
     --client-border: #AFB1B8;
 }
+
+$fontPrimary: 'Roboto', sans-serif;
+$fontLogo: Raleway, sans-serif;
